--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "blog-api",
+  "name": "blog-contact-form-tutorial",
   "version": "0.0.1",
+  "author": {
+    "name": "Ezra Sharp",
+    "email": "ezra@kiwidev.co.nz",
+    "url": "https://kiwidev.co.nz"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -10,10 +15,13 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "express-sanitized": "^0.5.1",
     "jade": "~1.11.0",
     "mandrill-api": "^1.0.45",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "validator": "^4.4.0"
+  },
+  "engine": {
+    "node": "5.3.0"
   }
 }
